--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="title" content="WowDash React Vite - Admin Dashboard Multipurpose Bootstrap 5 Template">
+  <meta name="title" content="Falcon software">
   <meta name="description"
     content="Wowdash React Vite is a developer-friendly, ready-to-use admin template designed for building attractive, scalable, and high-performing web applications.">
   <meta name="keywords" content="Dashboard,React JS, Wowdash react vite">
