--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/extra.css">
-  <title> WowDash React Vite - Admin Dashboard Multipurpose Bootstrap 5 Template</title>
+  <title>Falcon | Hotel Management software</title>
 </head>
 
 <body>
